Update to index and css for revision needed after first evaluation

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </div>
             <div class="row container2">  <!-- container to hold the two main columns -->
                 <div class="col-md-5">    <!-- left columns contains an image with text list under -->
-                    <img class="img-responsive" class ="mug" src="images/mug.png" alt="Orange mug with Udacity logo">
-                    <div class="features" text-center>
+                    <img class="img-responsive mug" src="images/mug.png" alt="Orange mug with Udacity logo">
+                    <div class="features">
                         <h2>Main Features</h2>
                         <div class="list">
                             <ul>
